--- a/custom/base.scss
+++ b/custom/base.scss
@@ -5,25 +5,25 @@
 // $margin: 0 0 20px 0;
 //
 // // Fonts
-// $heading-font-family: 'Helvetica';
+$heading-font-family: 'Graphik';
 // $heading-font-weight: bold;
 // $heading-font-style: normal;
 // $heading-font-size: 15px;
 // $heading-font-line-height: 17px;
 //
-// $utility-font-family: 'Helvetica';
+$utility-font-family: 'Graphik';
 // $utility-font-weight: normal;
 // $utility-font-style: normal;
 // $utility-font-size: 13px;
 // $utility-font-line-height: 16px;
 //
-// @mixin heading-font {
-//   font-family: $heading-font-family;
-//   font-weight: $heading-font-weight;
-//   font-style: $heading-font-style;
-//   font-size: $heading-font-size;
-//   line-height: $heading-font-line-height;
-// }
+@mixin heading-font {
+font-family: $heading-font-family;
+font-weight: $heading-font-weight;
+font-style: $heading-font-style;
+font-size: $heading-font-size;
+line-height: $heading-font-line-height;
+}
 //
 // @mixin utility-font {
 //   font-family: $utility-font-family;
@@ -33,12 +33,12 @@
 //   line-height: $utility-font-line-height;
 // }
 //
-// // Color palettes
-// $primary-color: #1f77b4;
-// $primary-shade-1: #ff7f0e;
-// $primary-shade-2: #bcbd22;
-// $primary-shade-3: #8c564b;
-// $primary-shade-4: #7f7f7f;
+//Color palettes
+$primary-color: #53A7A8;
+$primary-shade-1: #6f1758;
+$primary-shade-2: #ef9700;
+$primary-shade-3: #68afc1;
+$primary-shade-4: #d11600;
 // $primaryShades: $primary-color, $primary-shade-1, $primary-shade-2, $primary-shade-3, $primary-shade-4;
 //
 // $alternate-color: #6b6ecf;
@@ -63,8 +63,8 @@
 // $color-black: #111111;
 // $color-gray-dark: #595959;
 // $color-gray-medium: #777777;
-// $color-gray-light: #F9F9F9;
-// $color-white: #FFFFFF;
+$color-gray-light: #F0F0F0;
+$color-white: #FFFFFF;
 //
 // $color-red: #DA161F;
 // $color-orange: #FF6B00;
