--- a/meteor/client/stylesheets/partials/_chart-edit.scss
+++ b/meteor/client/stylesheets/partials/_chart-edit.scss
@@ -481,7 +481,7 @@ select {
   @include transition (all 0.1s ease-out);
   &:hover {
     background-color: $color-red;
-    color: $color-white;
+    color: $color-gray-light;
     @include transition (all 0.1s ease-in);
   }
 }
@@ -523,7 +523,7 @@ select {
 
 .loading-frame {
   opacity: 0;
-  background-color: rgba($color-white, 0.9);
+  background-color: rgba($color-gray-light, 0.9);
   position: absolute;
   top: 0;
   left: 0;
