--- a/meteor/client/templates/chart-new/chart-new.html
+++ b/meteor/client/templates/chart-new/chart-new.html
@@ -1,9 +1,9 @@
 <template name="chartNew">
 
   <form class="new-chart">
-    <input type="text" name="slug" placeholder="Slug" class="input-slug">
-    <textarea type="text" name="pasteData" placeholder="Paste your spreadsheet data here" class="input-data"></textarea>
-    <input type="submit" value="Create chart" class="input-submit">
+    <input type="text" name="slug" placeholder="Rubrik" class="input-slug">
+    <textarea type="text" name="pasteData" placeholder="Här klistrar du in din data" class="input-data"></textarea>
+    <input type="submit" value="Skapa graf" class="input-submit">
   </form>
 
 </template>
