--- a/meteor/client/templates/core/navigation/navigation.html
+++ b/meteor/client/templates/core/navigation/navigation.html
@@ -1,9 +1,9 @@
 <template name="navigation">
 
   <div class="header-nav">
-    <h2 class="header-help">Help</h2>
-    <h2 class="header-list"><a href="/list">Archive</a></h2>
-    <h2 class="header-new"><a href="/new">New chart</a></h2>
+    <h2 class="header-help">Hjälp</h2>
+    <h2 class="header-list"><a href="/list">Arkiv</a></h2>
+    <h2 class="header-new"><a href="/new">Ny graf</a></h2>
   </div>
 
 </template>
