--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -33,7 +33,7 @@
 // qualifier
 .#{$prefix}chart_qualifier {
   margin: 0;
-  background: $color-white;
+  background: $color-gray-light;
   height: auto;
   @include utility-font;
 }
@@ -47,11 +47,11 @@
 }
 
 .#{$prefix}chart_qualifier-text-bg {
-  stroke: $color-white;
+  stroke: $color-gray-light;
   stroke-width: 10px;
   stroke-linecap: round;
   stroke-linejoin: round;
-  fill: $color-white;
+  fill: $color-gray-light;
 }
 
 .#{$prefix}fo.#{$prefix}qualifier, .#{$prefix}fo.#{$prefix}qualifier > div {
