--- a/src/styles/components/_share_data.scss
+++ b/src/styles/components/_share_data.scss
@@ -43,7 +43,7 @@
 }
 
 .#{$prefix}chart_data_inner {
-  background: $color-white;
+  background: $color-gray-light;
   color: $color-black;
   font-size: 1.2em;
   line-height: 1.6em;
